# labteam

./: README.md
backend/: attack_simulation.py  compliance_judgment.py  dat.csv  generate_prompt_injection.py  pyproject.toml  requirements.txt  run_pipeline.py
backend/agents/: __init__.py  prompt.txt
backend/agents/_old/: Atlas_Prompt_Generator.ipynb  Deng_Robot.py  curie_agent.py
backend/agents/llm/: llm_provider.py
backend/agents/sub_agents/atlas/: agent.py  prompt.py
backend/agents/sub_agents/bohr/: agent.py  prompt.py
backend/agents/sub_agents/curie/: agent.py  prompt.py
backend/agents/sub_agents/deng/: agent.py  prompt.py
backend/agents/sub_agents/edison/: agent.py  prompt.py
backend/backend/: api.py
backend/output/: tuberack_6.stl
backend/results/: curie_output.json  deng_output.json
backend/results/no_defense/: step_1.json  step_10.json  step_2.json  step_3.json  step_4.json  step_5.json  step_6.json  step_7.json  step_8.json  step_9.json
backend/workflows/: crystal_opt.lcel
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPanel.tsx  Dashboard.tsx  ExperimentData.tsx  Header.tsx  LabwareDesign.tsx  PipelineStatus.tsx  Sidebar.tsx
frontend/src/pages/api/: atlas.ts
